Update for 2026.1